examples/test/testpolicy4604.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4604
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key47: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value14
          key9: value49
          key27: value43
      podSelector:
        matchLabels:
          key9: value15
